# pseudo-random-numbers

./: LICENSE  README.md  main.ipynb  pyproject.toml  setup.bat  setup.sh
pseudo_random_numbers/: helper.py
pseudo_random_numbers/generators/: __init__.py  blum_blum_shub.py  linear_congruential.py  mersenne_twister.py  middle_square.py  multiply_with_carry.py  split_mix.py  xorshift.py
