[tool.poetry]
name = "pseudo-random-numbers"
version = "0.1.0"
description = ""
authors = ["Krzysztof Wisniewski <argmaster.world@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pseudo_random_numbers"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
ipykernel = "^6.23.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.267"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
